WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269723
<br> between absolutely-positioned elements messes up text selection
https://bugs.webkit.org/show_bug.cgi?id=269723
Summary
<br> between absolutely-positioned elements messes up text selection
Nicolò Ribaudo
Reported
2024-02-19 09:48:14 PST
Created
attachment 469963
[details]
Reproduction I have three elements: <span style="position:absolute;top:40px;left:50px">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> <br> <span style="position:absolute;top:60px;left:100px">Morbi et ipsum a tortor pellentesque</span> When selecting text across the two sentences, I would expect the selection to only highlight those two spans. This works properly on Safari on MacOS. However, on Safari on iOS, it seems to increase the line-height of the second span to reach the `<br> element, as well as selecting `<br>`'s line.
Attachments
Reproduction
(673 bytes, text/html)
2024-02-19 09:48 PST
,
Nicolò Ribaudo
no flags
Details
Expected behavior (MacOS)
(43.02 KB, image/png)
2024-02-19 09:49 PST
,
Nicolò Ribaudo
no flags
Details
Wrong behavior (iOS)
(99.12 KB, image/jpeg)
2024-02-19 09:50 PST
,
Nicolò Ribaudo
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Nicolò Ribaudo
Comment 1
2024-02-19 09:49:45 PST
Created
attachment 469964
[details]
Expected behavior (MacOS)
Nicolò Ribaudo
Comment 2
2024-02-19 09:50:04 PST
Created
attachment 469965
[details]
Wrong behavior (iOS)
Radar WebKit Bug Importer
Comment 3
2024-02-26 09:49:13 PST
<
rdar://problem/123637358
>
cathiechen
Comment 4
2025-02-18 05:02:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40760
EWS
Comment 5
2025-03-06 06:31:43 PST
Committed
291696@main
(834e9831da4d): <
https://commits.webkit.org/291696@main
> Reviewed commits have been landed. Closing PR #40760 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug